working drum tracks

--- a/drum_sound.html
+++ b/drum_sound.html
@@ -22,7 +22,7 @@
         <div class="trackList">
             <label for="trackList">Drum Loop</label>
             <select id="trackDropBar">
-                
+                <option selected="selected" disabled value="0">Select a Drum Loop</option>
             </select>
         </div>
         <!--<div class="row">
